--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <uses-library android:name="android.test.runner" />
         <activity
             android:name="ps.androidyue.droiddigest.MainActivity"
             android:label="@string/app_name" >
@@ -23,5 +24,8 @@
             </intent-filter>
         </activity>
     </application>
+    <uses-permission android:name="android.permission.RUN_INSTRUMENTATION" />
+	<instrumentation android:name="android.test.InstrumentationTestRunner" 
+	    android:targetPackage="ps.androidyue.droiddigest" android:label="Droid Digest"/>
 
 </manifest>
